--- a/.github/workflows/culturegaspesie-org.yml
+++ b/.github/workflows/culturegaspesie-org.yml
@@ -3,8 +3,8 @@ name: Fetch culturegaspesie-org Events
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 4 * * 2'
-      
+  - cron: '30 6 * * 2'
+    
 jobs:
   artsdata-fetch-and-push:
     runs-on: ubuntu-latest
@@ -15,8 +15,7 @@ jobs:
           mode: "fetch-push"
           artifact: "culturegaspesie-org"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadFile: "culturegaspesie-org.jsonld"
-          page-url: "https://culturegaspesie.org/evenements/"
-          entity-identifier: "div.flex.flex-col.gap-6.group a"
+          downloadFile: "culturegaspesie-events.jsonld"
+          page-url: "https://culturegaspesie.org/event-sitemap.xml"
+          entity-identifier: "loc"
           token: "${{ secrets.GITHUB_TOKEN }}"
-          fetch-urls-headlessly: true
