--- a/.github/workflows/yardbirdsuite-events.yml
+++ b/.github/workflows/yardbirdsuite-events.yml
@@ -16,7 +16,6 @@ jobs:
           artifact: "yardbirdsuite-com"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
           downloadFile: "yardbirdsuite-events.jsonld"
-          page-url: "https://yardbirdsuite.com/events/page/"
-          entity-identifier: "a.h-100.w-100.position-absolute.t-0.l-0.z-999"
-          is-paginated: "true"
+          page-url: "https://yardbirdsuite.com/espresso_events-sitemap.xml"
+          entity-identifier: "loc"
           token: "${{ secrets.GITHUB_TOKEN }}"
