--- a/.github/workflows/capitoltheatre-ca.yml
+++ b/.github/workflows/capitoltheatre-ca.yml
@@ -3,7 +3,7 @@ name: Fetch capitoltheatre-ca Events
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 1 * *'
+    - cron: '0 0 1 * *' # Runs at 00:00 UTC, on day 1 of the month
       
 jobs:
   artsdata-fetch-and-push:
