--- a/.github/workflows/capitol-nb-ca.yml
+++ b/.github/workflows/capitol-nb-ca.yml
@@ -16,7 +16,7 @@ jobs:
           artifact: "capitol-nb-ca"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
           downloadFile: "capitolnb-events.jsonld"
-          page-url: "https://capitol.nb.ca/en/tickets-events?start="
+          page-url: "https://capitol.nb.ca/en/tickets-events?start=,https://capitol.nb.ca/fr/spectacles-et-billets?start="
           entity-identifier: "div.fc-item-block-standard-wrapper.odd a, div.fc-item-block-standard-wrapper.even a"
           is-paginated: "0"
           headless: "true"
