--- a/.github/workflows/imperialtheatre-events.yml
+++ b/.github/workflows/imperialtheatre-events.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           mode: "fetch-push"
           artifact: "imperialtheatre-ca"
-          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          publisher: "https://github.com/fjjulien#this"
           downloadFile: "imperialtheatre-events.jsonld"
           page-url: "https://imperialtheatre.ca/events/?_paged="
           entity-identifier: "div.fl-post-image a"
