enhancement(workflow): updated all workflows to use v3 crawler

--- a/.github/workflows/caller-custom.yml
+++ b/.github/workflows/caller-custom.yml
@@ -18,12 +18,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "${{ inputs.artifact }}"
           publisher: "${{ inputs.publisher  }}"
-          downloadFile: "${{ inputs.artifact }}.jsonld"
+          downloadFile: "output/${{ inputs.artifact }}.jsonld"
           page-url: "${{ inputs.page-url }}"
           entity-identifier: "${{ inputs.entity-identifier }}"
           token: "${{ secrets.GITHUB_TOKEN }}"
