--- a/.github/workflows/capitoltheatre-ca.yml
+++ b/.github/workflows/capitoltheatre-ca.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "capitoltheatre-ca"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadFile: "capitoltheatre-events.jsonld"
+          downloadFile: "output/capitoltheatre-events.jsonld"
           page-url: "https://capitoltheatre.ca/events/list/?tribe_paged="
           entity-identifier: "h3.tribe-events-list-event-title a"
           token: "${{ secrets.GITHUB_TOKEN }}"
