--- a/.github/workflows/totem-events.yml
+++ b/.github/workflows/totem-events.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "totemcontemporain-com"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadFile: "totem-events.jsonld"
+          downloadFile: "output/totem-events.jsonld"
           page-url: "https://totemcontemporain.com/fr/calendrier"
           entity-identifier: "h3.picto.padding-bottom-12 a"
           token: "${{ secrets.GITHUB_TOKEN }}"
