--- a/.github/workflows/agoradanse-events.yml
+++ b/.github/workflows/agoradanse-events.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "agoradanse-com"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadFile: "agoradanse-events.jsonld"
+          downloadFile: "output/agoradanse-events.jsonld"
           page-url: "https://agoradanse.com/evenement/"
           entity-identifier: "div.x-container.max a"
           token: "${{ secrets.GITHUB_TOKEN }}"
