--- a/.github/workflows/capitol-nb-ca.yml
+++ b/.github/workflows/capitol-nb-ca.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "capitol-nb-ca"
           publisher: "https://github.com/fjjulien#this"
-          downloadFile: "capitolnb-events.jsonld"
+          downloadFile: "output/capitolnb-events.jsonld"
           page-url: "https://capitol.nb.ca/en/tickets-events?start=,https://capitol.nb.ca/fr/spectacles-et-billets?start="
           entity-identifier: "div.fc-item-block-standard-wrapper.odd a, div.fc-item-block-standard-wrapper.even a"
           is-paginated: "0"
