--- a/.github/workflows/grandsballets-com.yml
+++ b/.github/workflows/grandsballets-com.yml
@@ -9,12 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "grandsballets-com"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadFile: "grandsballets-com.jsonld"
+          downloadFile: "output/grandsballets-com.jsonld"
           page-url: "https://grandsballets.com/en/performances/"
           entity-identifier: "a.button[href*='/en/performances/detail/']"
           token: "${{ secrets.GITHUB_TOKEN }}"
