--- a/.github/workflows/imperialtheatre-events.yml
+++ b/.github/workflows/imperialtheatre-events.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "imperialtheatre-ca"
           publisher: "https://github.com/fjjulien#this"
-          downloadFile: "imperialtheatre-events.jsonld"
+          downloadFile: "output/imperialtheatre-events.jsonld"
           page-url: "https://imperialtheatre.ca/events/?_paged="
           entity-identifier: "div.fl-post-image a"
           is-paginated: "true"
