--- a/.github/workflows/kiac-events.yml
+++ b/.github/workflows/kiac-events.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "kiac-ca"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadFile: "kiac-events.jsonld"
+          downloadFile: "output/kiac-events.jsonld"
           page-url: "https://kiac.ca/calendar-of-events/"
           entity-identifier: "div.tribe-events-pro-photo__event-featured-image-wrapper a"
           token: "${{ secrets.GITHUB_TOKEN }}"
