--- a/.github/workflows/kingstongrand-events.yml
+++ b/.github/workflows/kingstongrand-events.yml
@@ -9,12 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "kingstongrand-ca"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadFile: "kingston-grand-events.jsonld"
+          downloadFile: "output/kingston-grand-events.jsonld"
           page-url: "https://www.kingstongrand.ca/events"
           entity-identifier: "div.image a"
           token: "${{ secrets.GITHUB_TOKEN }}"
