--- a/.github/workflows/levivier-events.yml
+++ b/.github/workflows/levivier-events.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "levivier-ca"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadFile: "levivier-events.jsonld"
+          downloadFile: "output/levivier-events.jsonld"
           page-url: "https://levivier.ca/fr"
           entity-identifier: "div.cont-even a"
           token: "${{ secrets.GITHUB_TOKEN }}"
