--- a/.github/workflows/spectart-com-events.yml
+++ b/.github/workflows/spectart-com-events.yml
@@ -9,12 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v2
+        uses: culturecreates/artsdata-pipeline-action@v3
         with:
           mode: "fetch-push"
           artifact: "spectart-com-events"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          downloadFile: "spectart-com-events.jsonld"
+          downloadFile: "output/spectart-com-events.jsonld"
           page-url: "https://spectart.com/programmation/"
           entity-identifier: "a.thumbnail"
           token: "${{ secrets.GITHUB_TOKEN }}"
