--- a/.github/workflows/spec-qc-ca-events.yml
+++ b/.github/workflows/spec-qc-ca-events.yml
@@ -11,10 +11,11 @@ jobs:
       - name: Action setup
         uses: culturecreates/artsdata-pipeline-action@v3
         with:
-          mode: "fetch-push"
+          mode: "fetch-test"
           artifact: "spec-qc-ca-events"
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
           downloadFile: "output/spec-qc-ca-events.jsonld"
           page-url: "https://spec.qc.ca/programmation"
           entity-identifier: "div.programmation-programmation__results a"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          callback-url: "https://webhook.site/3d45224a-3227-400b-ba44-c828e7e77e0e"
