revert webhook changes

--- a/.github/workflows/capitol-nb-ca.yml
+++ b/.github/workflows/capitol-nb-ca.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Action setup
         uses: culturecreates/artsdata-pipeline-action@v3
         with:
-          mode: "fetch-test"
+          mode: "fetch-push"
           artifact: "capitol-nb-ca"
           publisher: "https://github.com/fjjulien#this"
           downloadFile: "output/capitolnb-events.jsonld"
@@ -21,4 +21,3 @@ jobs:
           is-paginated: "0"
           offset: "12"
           token: "${{ secrets.GITHUB_TOKEN }}"
-          report-callback-url: "https://webhook.site/3d45224a-3227-400b-ba44-c828e7e77e0e"
