--- a/.github/workflows/casadelpopolo-com.yml
+++ b/.github/workflows/casadelpopolo-com.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Action setup
         uses: culturecreates/artsdata-pipeline-action@v3
         with:
-          mode: "test-fetch-push"
+          mode: "fetch-test"
           artifact: "casadelpopolo-com"
           publisher: "https://github.com/saumier#this"
           page-url: "https://casadelpopolo.com/en"
