--- a/.github/workflows/adc659-ca.yml
+++ b/.github/workflows/adc659-ca.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Action setup
-      uses: culturecreates/artsdata-pipeline-action@main
+      uses: culturecreates/artsdata-pipeline-action@v3
       with:
         mode: fetch-push
         artifact: adc659-ca
