--- a/.github/workflows/adc659-ca.yml
+++ b/.github/workflows/adc659-ca.yml
@@ -19,7 +19,7 @@ jobs:
         is-paginated: "true"
         fetch-urls-headlessly: "true"
         token: "${{ secrets.GITHUB_TOKEN }}"
-        xpath-config: |
+        html-extract-config: |
           {
             "entity_type": "http://schema.org/Person",
             "extract": {
