--- a/.github/workflows/levivier-events.yml
+++ b/.github/workflows/levivier-events.yml
@@ -3,7 +3,7 @@ name: Fetch LeVivier Events
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 1 */6 *'
+    - cron: '0 4 * * 2'
       
 jobs:
   artsdata-fetch-and-push:
