--- a/.github/workflows/levivier-events.yml
+++ b/.github/workflows/levivier-events.yml
@@ -17,5 +17,5 @@ jobs:
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
           downloadFile: "output/levivier-events.jsonld"
           page-url: "https://levivier.ca/fr"
-          entity-identifier: "div.cont-even a"
+          # entity-identifier: "div.cont-even a"
           token: "${{ secrets.GITHUB_TOKEN }}"
