--- a/.github/workflows/casadelpopolo-com.yml
+++ b/.github/workflows/casadelpopolo-com.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           mode: "fetch-push"
           artifact: "casadelpopolo-com"
-          publisher: "https://github.com/saumier#this"
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
           page-url: "https://casadelpopolo.com"
           headless: true
           report-callback-url: https://webhook.site/2716ad6e-e9c6-41cf-8ecc-d1c633803d1c
