--- a/.github/workflows/test-placedesarts-com.yml
+++ b/.github/workflows/test-placedesarts-com.yml
@@ -15,3 +15,4 @@ jobs:
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
           page-url: "https://www.placedesarts.com"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          custom-databus-url: "http://staging.api.artsdata.ca/databus/"
