--- a/.github/workflows/camroselive-ca.yml
+++ b/.github/workflows/camroselive-ca.yml
@@ -17,6 +17,6 @@ jobs:
           publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
           downloadFile: "output/camroselive-events.jsonld"
           page-url: "https://camroselive.ca/events-sitemap.xml"
-          entity-identifier: "td.left > a"
+          entity-identifier: "loc"
           fetch-urls-headlessly: true
           token: "${{ secrets.GITHUB_TOKEN }}"
