--- a/.github/workflows/kiac-events.yml
+++ b/.github/workflows/kiac-events.yml
@@ -19,4 +19,4 @@ jobs:
           page-url: "https://kiac.ca/calendar-of-events/"
           entity-identifier: "div.tribe-events-pro-photo__event-featured-image-wrapper a"
           token: "${{ secrets.GITHUB_TOKEN }}"
-          register-only: true
+          register-only: "true"
