enhancement : cloudflare secret added to workflows that uses "fetch-push" mode

--- a/.github/workflows/adc659-ca.yml
+++ b/.github/workflows/adc659-ca.yml
@@ -87,3 +87,5 @@ jobs:
               }
             }
           }
+        cloudflare-private-key: |
+            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
