--- a/.github/workflows/capitoltheatre-ca.yml
+++ b/.github/workflows/capitoltheatre-ca.yml
@@ -19,3 +19,5 @@ jobs:
           page-url: "https://capitoltheatre.ca/events/list/?tribe_paged="
           entity-identifier: "h3.tribe-events-list-event-title a"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          cloudflare-private-key: |
+            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
