--- a/.github/workflows/grandtheatrequebec-events.yml
+++ b/.github/workflows/grandtheatrequebec-events.yml
@@ -19,3 +19,5 @@ jobs:
           page-url: "https://grandtheatre.qc.ca/programmation/"
           entity-identifier: "article.show a"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          cloudflare-private-key: |
+            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
