--- a/.github/workflows/kingstongrand-events.yml
+++ b/.github/workflows/kingstongrand-events.yml
@@ -18,3 +18,5 @@ jobs:
           page-url: "https://www.kingstongrand.ca/events"
           entity-identifier: "div.image a"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          cloudflare-private-key: |
+            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
