--- a/.github/workflows/levivier-events.yml
+++ b/.github/workflows/levivier-events.yml
@@ -19,3 +19,5 @@ jobs:
           page-url: "https://levivier.ca/fr"
           entity-identifier: "div.cont-even a"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          cloudflare-private-key: |
+            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
