--- a/.github/workflows/saskatoonsymphony-events.yml
+++ b/.github/workflows/saskatoonsymphony-events.yml
@@ -19,3 +19,5 @@ jobs:
           page-url: "https://saskatoonsymphony.org/season/"
           entity-identifier: "div.vem-more-details a"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          cloudflare-private-key: |
+            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
