--- a/.github/workflows/spec-qc-ca-events.yml
+++ b/.github/workflows/spec-qc-ca-events.yml
@@ -18,3 +18,5 @@ jobs:
           page-url: "https://spec.qc.ca/programmation"
           entity-identifier: "div.programmation-programmation__results a"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          cloudflare-private-key: |
+            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
