--- a/.github/workflows/spectart-com-events.yml
+++ b/.github/workflows/spectart-com-events.yml
@@ -18,3 +18,5 @@ jobs:
           page-url: "https://spectart.com/programmation/"
           entity-identifier: "a.thumbnail"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          cloudflare-private-key: |
+            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
