--- a/.github/workflows/totem-events.yml
+++ b/.github/workflows/totem-events.yml
@@ -19,3 +19,5 @@ jobs:
           page-url: "https://totemcontemporain.com/fr/calendrier"
           entity-identifier: "h3.picto.padding-bottom-12 a"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          cloudflare-private-key: |
+            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
