--- a/.github/workflows/yardbirdsuite-events.yml
+++ b/.github/workflows/yardbirdsuite-events.yml
@@ -19,3 +19,6 @@ jobs:
           page-url: "https://yardbirdsuite.com/espresso_events-sitemap.xml"
           entity-identifier: "loc"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          cloudflare-private-key: |
+            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
+
