enhancement : cloudflare secret format changes in workflows

--- a/.github/workflows/adc659-ca.yml
+++ b/.github/workflows/adc659-ca.yml
@@ -87,5 +87,4 @@ jobs:
               }
             }
           }
-        cloudflare-private-key: |
-            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
+        cloudflare-private-key: ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
