--- a/.github/workflows/camroselive-ca.yml
+++ b/.github/workflows/camroselive-ca.yml
@@ -20,5 +20,4 @@ jobs:
           entity-identifier: "loc"
           fetch-urls-headlessly: true
           token: "${{ secrets.GITHUB_TOKEN }}"
-          cloudflare-private-key: |
-            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
+          cloudflare-private-key: ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
