--- a/.github/workflows/grandtheatrequebec-events.yml
+++ b/.github/workflows/grandtheatrequebec-events.yml
@@ -19,5 +19,4 @@ jobs:
           page-url: "https://grandtheatre.qc.ca/programmation/"
           entity-identifier: "article.show a"
           token: "${{ secrets.GITHUB_TOKEN }}"
-          cloudflare-private-key: |
-            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
+          cloudflare-private-key: ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
