--- a/.github/workflows/kiac-events.yml
+++ b/.github/workflows/kiac-events.yml
@@ -19,5 +19,4 @@ jobs:
           page-url: "https://kiac.ca/calendar-of-events/"
           entity-identifier: "div.tribe-events-pro-photo__event-featured-image-wrapper a"
           token: "${{ secrets.GITHUB_TOKEN }}"
-          cloudflare-private-key: |
-            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
+          cloudflare-private-key: ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
