--- a/.github/workflows/kingstongrand-events.yml
+++ b/.github/workflows/kingstongrand-events.yml
@@ -18,5 +18,4 @@ jobs:
           page-url: "https://www.kingstongrand.ca/events"
           entity-identifier: "div.image a"
           token: "${{ secrets.GITHUB_TOKEN }}"
-          cloudflare-private-key: |
-            ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
+          cloudflare-private-key: ${{ secrets.CLOUDFLARE_PRIVATE_KEY }}
