--- a/.github/workflows/capitoltheatre-ca.yml
+++ b/.github/workflows/capitoltheatre-ca.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   # schedule:
   #   - cron: '0 0 1 * *' # Runs at 00:00 UTC, on day 1 of the month
+  # Note: Schedule removed because Website was redone without any JSON-LD
+  # TODO: Add xpath scraping?
       
 jobs:
   artsdata-fetch-and-push:
